traefik-0.0.1.yaml
---
# Source: traefik/templates/dashboard-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: tr0-0-1-traefik-dashboard
  labels:
    app: tr0-0-1-traefik
    chart: "traefik-1.17.0"
    release: "tr0-0-1"
    heritage: "Tiller"
  annotations:
spec:
  selector:
    app: tr0-0-1-traefik
  ports:
  - port: 80
    targetPort: 8080

---
# Source: traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tr0-0-1-traefik
  labels:
    app: tr0-0-1-traefik
    chart: "traefik-1.17.0"
    release: "tr0-0-1"
    heritage: "Tiller"
  annotations:
spec:
  type: NodePort
  selector:
    app: tr0-0-1-traefik
  ports:
  - port: 80
    name: http
    nodePort: 30080
    targetPort: http
  - port: 443
    name: https
    nodePort: 30443
    targetPort: httpn

---
# Source: traefik/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tr0-0-1-traefik
  labels:
    app: tr0-0-1-traefik
    chart: "traefik-1.17.0"
    release: "tr0-0-1"
    heritage: "Tiller"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tr0-0-1-traefik
  template:
    metadata:
      annotations:
        checksum/config: faf0862c66530c5aa70dea2aa1217d99f8cfe3d20f38d19c7e9c7941ce69399f
      labels:
        app: tr0-0-1-traefik
        chart: "traefik-1.17.0"
        release: "tr0-0-1"
        heritage: "Tiller"
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:1.4.6
        name: tr0-0-1-traefik
        resources:
          requests:
            cpu: "100m"
            memory: "20Mi"
          limits:
            cpu: "100m"
            memory: "30Mi"
        readinessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /config
          name: config
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
          protocol: TCP
        - name: httpn
          containerPort: 8880
          protocol: TCP
        - name: https
          containerPort: 443
          hostPort: 443
          protocol: TCP
        - name: dash
          containerPort: 8080
          hostPort: 8080
          protocol: TCP
        args:
        - --configfile=/config/traefik.toml
      volumes:
      - name: config
        configMap:
          name: tr0-0-1-traefik

---
# Source: traefik/templates/dashboard-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tr0-0-1-traefik-dashboard
  labels:
    app: tr0-0-1-traefik
    chart: "traefik-1.17.0"
    release: "tr0-0-1"
    heritage: "Tiller"
  annotations:
spec:
  rules:
  - host: nmoller.io
    http:
      paths:
      - backend:
          serviceName: tr0-0-1-traefik-dashboard
          servicePort: 80

---
# Source: traefik/templates/acme-pvc.yaml


---
# Source: traefik/templates/default-cert-secret.yaml


---
# Source: traefik/templates/rbac.yaml
